# CodeHermit

./: .env  INSTALL.md  README.md  USAGE.md  pyproject.toml  uv.tomlbak
extension/: README.md  local-code-assistant-ext-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
extension/src/: client.ts  extension.ts
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/features/: ChatInterface.tsx  CodeGenerator.tsx  CodeReviewer.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/shared/: CodeBlock.tsx  MetricCard.tsx  ResizableBox.tsx
frontend/src/services/: api.ts
frontend/src/theme/: theme.ts
local_code_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: .env.template  .gitignore  README.md  app.py  autogen_client.py  code_exec.py  context_manager.py  flows.py  main.py  pyproject.toml  requirements.txt  utils.py
server/rust/code_assistant_rust/: Cargo.toml
server/rust/code_assistant_rust/src/: lib.rs
server/tests/: test_endpoints.py  test_rust_implementations.py
