[project]
name = "local-code-assistant"
version = "0.1.0"
description = "Your project description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "crewai>=0.11.0,<1.0.0",
    "autogen>=0.2.0,<1.0.0",
    "chromadb>=0.4.22,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "psutil>=5.9.8,<6.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "streamlit>=1.32.0,<2.0.0",
    "requests>=2.31.0,<3.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]

# Optional: uv-specific configuration
[tool.uv]

[tool.uv.workspace]
members = [
    "server",
]
# Example: set a custom index URL if needed
# [[tool.uv.index]]
# url = "https://pypi.org/simple"
# default = true
